Fixed arbitrary size images for webgl_shader2.html

--- a/webgl_shader2.html
+++ b/webgl_shader2.html
@@ -62,7 +62,7 @@
             c0mposer.compose(glObject, glTextureUtils, glShaderUtils, glPlainRendering, {
                 vertexShaderCode: document.getElementById( 'vertexShader' ).textContent,
                 fragmentShaderCode: document.getElementById( 'fragmentShader' ).textContent,
-                imageURL: "IMG_2235b.JPG"
+                imageURL: "IMG_2235.JPG"
             }).run();
 
         </script>
