Seperated a bit of gl stuff into utils.

--- a/webgl_shader.html
+++ b/webgl_shader.html
@@ -24,9 +24,9 @@
 
 		<script type="text/javascript" src="Three.js"></script>
 
-		<script type="text/javascript" src="js/Detector.js"></script>
-		<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
-		<script type="text/javascript" src="js/Stats.js"></script>
+		<script type="text/javascript" src="gl/lib/Detector.js"></script>
+		<script type="text/javascript" src="gl/lib/RequestAnimationFrame.js"></script>
+		<script type="text/javascript" src="gl/lib/Stats.js"></script>
 
 		<script id="vertexShader" type="x-shader/x-vertex">
 			void main()
