--- a/gl/index.html
+++ b/gl/index.html
@@ -23,9 +23,9 @@
 
         <script type="text/javascript" src="lib/underscore.js"></script>
         <script type="text/javascript" src="lib/c0mposer-0.0.2.js"></script>
-		<script type="text/javascript" src="js/Detector.js"></script>
-		<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
-		<script type="text/javascript" src="js/Stats.js"></script>
+		<script type="text/javascript" src="lib/Detector.js"></script>
+		<script type="text/javascript" src="lib/RequestAnimationFrame.js"></script>
+		<script type="text/javascript" src="lib/Stats.js"></script>
 
         <script id="vertexShader" type="x-shader/x-vertex">
             attribute vec2 position;
@@ -61,13 +61,18 @@
         <script src="gltextureutils.js" type="text/javascript"></script>
         <script src="glshaderutils.js" type="text/javascript"></script>
         <script src="glplainrendering.js" type="text/javascript"></script>
+        <script src="glstats.js" type="text/javascript"></script>
+        <script src="glutils.js" type="text/javascript"></script>
         <script type="text/javascript">
 
-            c0mposer.compose(glObject, glTextureUtils, glShaderUtils, glPlainRendering, {
-                vertexShaderCode: document.getElementById( 'vertexShader' ).textContent,
-                fragmentShaderCode: document.getElementById( 'fragmentShader' ).textContent,
-                imageURL: "IMG_2235.JPG"
-            }).run();
+            var o = c0mposer.compose(glObject, glPlainRendering, glStats, {
+                vertexShaderCode: document.getElementById('vertexShader').textContent,
+                fragmentShaderCode: document.getElementById('fragmentShader').textContent,
+                imageURL: "IMG_2235.JPG",
+                el: document.getElementById('container')
+            });
+            o.init();
+            o.run();
 
         </script>
 	</body>
