--- a/gl/index.html
+++ b/gl/index.html
@@ -57,10 +57,11 @@
             }
 		</script>
 
+        <script src="glelements/glanimateratio.js" type="text/javascript"></script>
 		<script src="glelements/globject.js" type="text/javascript"></script>
         <script src="glelements/glplanerenderer.js" type="text/javascript"></script>
-        <script src="glelements/gltexturedshadered.js" type="text/javascript"></script>
         <script src="glelements/glstats.js" type="text/javascript"></script>
+        <script src="glelements/gltexturedshadered.js" type="text/javascript"></script>
 
         <script src="gltextureutils.js" type="text/javascript"></script>
         <script src="glshaderutils.js" type="text/javascript"></script>
@@ -68,11 +69,12 @@
 
         <script type="text/javascript">
 
-            var o = c0mposer.compose(glObject, glImageRenderer, glTexturedShadered, glStats, {
+            var o = c0mposer.compose(glObject, glImageRenderer, glTexturedShadered, {
                 vertexShaderCode: document.getElementById('vertexShader').textContent,
                 fragmentShaderCode: document.getElementById('fragmentShader').textContent,
                 imageURL: "IMG_2235.JPG",
-                el: document.getElementById('container')
+                el: document.getElementById('container'),
+                ratio: 0.5
             });
             o.init();
             o.run();
